[package]
name = "battlemon_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0.64"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
rust_decimal = { version = "1.23.1", features = ["serde_json"] }
tokio = { version = "1.20.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.9"
futures = "0.3.21"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
config = { version = "0.13.1", default-features = false, features = ["toml"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4.19"
near-crypto = "0.14.0"
near-lake-framework = "=0.5.0"
aws-sdk-s3 = "0.13.0"
battlemon_near_json_rpc_client_wrapper = { git = "https://github.com/battlemon-project/battlemon_near_json_rpc_client_wrapper" }
base64 = "0.13.0"
reqwest = { version = "0.11.11", features = ["json"] }
battlemon_models = { git = "https://github.com/battlemon-project/battlemon_models", features = ["market", "market-contract", "market-convert", "market-events", "config", "nft-convert", "nft-events"] }
secrecy = { version = "0.8.0", features = ["serde"] }